# small-vae

./: .gitignore  LICENSE  README.md  pyproject.toml  train_flowers.py  train_mnist.py
vae/: blocks.py  modules.py  vae.py
vae/loss/: discriminator.py  loss.py
vae/model/: blocks.py  modules.py  vae.py
vae/training/: hyperparameters.py  train_steps.py  utils.py
