[project]
name = "simple-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.4",
    "jax[cuda12]>=0.5.3",
    "jaxlpips>=1.1.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "ray[data]>=2.44.1",
    "tqdm>=4.67.1",
]


[tool.ruff]
line-length=100
